Adição de novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -15,18 +15,54 @@
 
 <body>
     <div class="container">
+
+        <!-- Icone de Hamburguer-->
+        <div class="hamburguer">
+
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+
+        </div><!-- Icone de Hamburguer-->
+
+
         <header>
+            <!-- Background principal e header da página-->
             <div class="img-wrapper">
                 <img src="/images/bg.jpg" alt="Background">
             </div>
             <div class="banner">
                 <h1>Desenvolvedor Web</h1>
-                <p>Caio Adriano Rodrigues dos Santos</p>
+                <p>Caio Adriano R. Santos</p>
                 <button>Saiba Mais</button>
-            </div>
+            </div><!-- Background principal e header da página-->
 
         </header>
+
+        <aside class="sidebar">
+            <!-- Menu lateral-->
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Skills</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav><!-- Menu lateral-->
+
+            <!-- Icones Menu lateral-->
+            <div class="social-midia">
+
+                <a target="_blank" href="https://www.linkedin.com/in/caio-adriano-rodrigues-dos-santos-846185193/"><i
+                        class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://github.com/ccaioadriano"><i class="fab fa-github-square"></i></a>
+                <a href="mailto:caiobhadriano@gmail.com"><i class="fas fa-envelope-square"></i></a>
+            </div><!-- Icones Menu lateral-->
+
+        </aside>
     </div>
 </body>
+<script src="/js/scripts.js"></script>
 
 </html>
